# hack-interview

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: audio.py  config.py  gpt_query.py  gui.py  handlers.py  models.py  screenshot_area.py
utils/: cache.py  image.py  list_models.py  transcribe.py
